troca tah <span> pela <strong>

--- a/desafio-1/style.css
+++ b/desafio-1/style.css
@@ -3,6 +3,8 @@ body {
     color: white;
 }
 
-.preco {
-        font-weight: bold;
+
+.produtos-precos strong {
+    font-weight: bold;
+    color: blue;
 }
