--- a/desafio-3/style.css
+++ b/desafio-3/style.css
@@ -3,10 +3,10 @@ p{
     padding: 20px;
 }
 
-.estilo-1 {
+.paragrafo-normal {
     background-color: #F5F5F5;
 }
 
-.estilo-2 {
+.paragrafo-destacado {
     background-color: #F0CCE2;
 }
